<resources>
    <string name="app_name">Food World </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> Food World </string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_latestrecipe"> Latest Recipe </string>
    <string name="menu_category">Category</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About Us</string>
    <string name="menu_history"> Logcat </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
</resources>
