<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_pink"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_latestrecipe"
            android:icon="@drawable/latest"
            android:title="@string/menu_latestrecipe" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/menu_category" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/history"
                android:title="@string/menu_history"
                />
        </menu>
    </item>

</menu>
